# Barquitos

./: .gitignore  README.md
BarquitosCliente/: readme.md
BarquitosCliente/Assets/Prefabs/: BattleShip.prefab  Button.prefab  GameManager.prefab  Position.prefab  PositionEnemy.prefab  SetupPrefab.prefab  WaterOponent.prefab  WaterPlayer.prefab
BarquitosCliente/Assets/Scenes/: Error.unity  Game.unity  Menu.unity  ScenePruebas.unity
BarquitosCliente/Assets/Scripts/AI/: AIData.cs  AIDataGroup.cs  AIManager.cs  EasyBehaviour.cs  HardBehaviour.cs  IABehaviour.cs  MediumBehaviour.cs
BarquitosCliente/Assets/Scripts/GameLogic/: AttackData.cs  AudioManager.cs  BattleShip.cs  ButtonData.cs  ButtonSetter.cs  Fleet.cs  GameManager.cs  MenuManager.cs  MovButtons.cs  ReadyButton.cs
BarquitosCliente/Assets/Scripts/GameLogic/Enemy/: EnemyFleet.cs
BarquitosCliente/Assets/Scripts/GameLogic/Grid/: ButtonEnemyField.cs  CellData.cs  Grid.cs  GridObject.cs  GridSetter.cs  PlayerGridPosition.cs
BarquitosCliente/Assets/Scripts/GameLogic/Player/: BattleShip.cs  BattleShipMover.cs  (+2 more)
BarquitosCliente/Assets/Scripts/Network/: ISerializable.cs  NetworkData.cs  NetworkDataGroup.cs  NetworkManager.cs  Socket.cs
BarquitosCliente/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
BarquitosCliente/UserSettings/: EditorUserSettings.asset
BarquitosServidor/: omnisharp.json
BarquitosServidor/server/: Game.cs  ISerializable.cs  Program.cs  Socket.cs  server.csproj
LibreriaDeSockets/: CMakeLists.txt  README.md  build.py  build.sh
LibreriaDeSockets/src/: test.cc  test.h
(+17 files in other folders)
